syntax = "proto3";

option csharp_namespace = "GRPC.Protos";

import "Protos/TrackingModels.proto";
import "google/protobuf/empty.proto";

service TrackingService {
	rpc Track(TrackingMessage) returns (TrackingResponse);
	rpc StreamRequest(stream TrackingMessage) returns (TrackingResponse);
	rpc StreamResponse(TrackingMessage) returns (stream TrackingResponse);
	rpc Stream(stream TrackingMessage) returns (stream TrackingResponse);
}

